# smutil

./: README.md  Snakefile  requirements.txt  setup.cfg
smutil/: __init__.py  awslambda.py  awslambda_rule.py  decolator_remote_s3.py  smutil.py
