[metadata]
name = smutil
version = 0.0.1
description = utilities for snakemake
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/smatsumoto78/smutil
author = Shinji Matsumoto
author_email = s.kawagt@gmail.com

[options]
packages=smutil
